# cmsplugin_wrappedtext

./: MANIFEST.in  Makefile  README.rst  setup.cfg  setup.py
cmsplugin_wrappedtext/: cms_plugins.py  forms.py  models.py
cmsplugin_wrappedtext/templates/plugins/wrappedtext/: wrappedtext.html
