[metadata]
name = cmsplugin_wrappedtext
version = 0.1
author = Gaston Tjebbes
author_email = g.tjebbes@majerti.fr
summary = Wrap your text
description_file = README.rst
keywords = django-cms, django, plugin
home_page = https://github.com/tonthon/cmsplugin_wrappedtext
project_url =
    Source repository,https://github.com/tonthon/cmsplugin_wrappedtext
requires_dist =
    django
    django-cms
    south
requires_python = >=2.6
license = GPLv3
classifier =
    Development Status :: 1 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Topic :: Software Development :: Version Control

[package_data]
cmsplugin_wrappedtext = templates/plugins/wrappedtext/*.html

[package_dir]
cmsplugin_wrappedtext = cmsplugin_wrappedtext

[files]
packages =
    cmsplugin_wrappedtext
extra_files =
    setup.cfg
    setup.py
    README.rst
    LICENSE.txt
    MANIFEST.in
